# qaemdecor

backend/qaemdecor/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/qaemdecor/data/db/base/1/: 2619
backend/qaemdecor/data/db/base/13395/: 1247  1249  1249_fsm  1259  16384  16386  16392  16393  16395  16397  16401  16403  16405  16407  16411  16413  16419  16421  16423  16429  16431  16438  16439  16440  16452  16453  16457  16459  16465  16466  16468  16470  16476  16478  16484  16486  16487  16499  16500  16501  (+140 more)
backend/qaemdecor/data/db/global/: 1260  2676  pg_control  pg_internal.init
backend/qaemdecor/data/db/pg_multixact/members/: 0000
backend/qaemdecor/data/db/pg_stat/: db_0.stat  db_13395.stat  global.stat
backend/qaemdecor/decorbusiness/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/qaemdecor/decorbusiness/migrations/: 0001_initial.py  0002_auto_20210830_0716.py  0003_decorsample.py  0004_decorsample_images.py  0005_delete_decorsample.py  0006_decorsample.py  0007_alter_decorsample_addeddate.py  0008_auto_20210903_1441.py  0009_auto_20210903_1443.py
backend/qaemdecor/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/qaemdecor/main/migrations/: 0001_initial.py  0002_slidepage_slidetype.py  0003_alter_slidepage_title.py  0004_logoimage.py  0005_auto_20210830_1054.py
backend/qaemdecor/qaemdecor/: asgi.py  settings.py  urls.py  wsgi.py
backend/qaemdecor/translator/: admin.py  models.py
backend/qaemdecor/translator/migrations/: 0001_initial.py
frontend/qaemdecor/: README.md  (+1 more)
(+37 files in other folders)
